[tool.poetry]
name = "python-prj-sample"
version = "0.1.0"
description = ""
authors = ["hoge <hoge@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = {extras = ["cli"], version = "^0.19.0"}
cryptography = "^37.0.1"
cryptoauthlib = "^20220320"
awscrt = "^0.14.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-sugar = "^0.9.4"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"